(#1) partial solved images overflow

--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,8 @@ footer p {
 .contact-item img {
     justify-self: center;
     align-self: center;
-    height: 100%;
+    height: 80%;
+    width: 100px;
 }
 
 .profile-main-container {
